# Hostel_Management

./: .env  README.md  SRS.md  manage.py  pyproject.toml
.codebuddy/: summary.md
app/: __init__.py  config.py
app/models/: __init__.py  complaint.py  hostel.py  room.py  student.py  user.py
app/routes/: auth_routes.py  complaint_routes.py  dashboard_routes.py  hostel_routes.py  student_routes.py
app/services/: auth.py
app/templates/: admin_login.html  base.html  complaint_form.html  complaints.html  dashboard.html  hostel_form.html  hostels.html  index.html  login.html  register.html  room_form.html  rooms.html  student_form.html  students.html
diagrams/: ER Diagram.PlantUML  Use Case.PlantUML
instance/: hostel.db
requirements/: dev.txt  prod.txt
tests/: test_student.py
