[project]
name = "hostel-management"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "iniconfig>=2.1.0",
    "marshmallow==3.21.0",
    "python-dotenv>=1.1.0",
    "the-new-hotness>=1.3.0",
]
